Fix spacing on narrow screens

--- a/src/components/table.module.scss
+++ b/src/components/table.module.scss
@@ -12,6 +12,7 @@
 
 .table {
   table-layout: fixed;
+  width: 100%;
   border-collapse: collapse;
   text-align: center;
   font-size: 0.875rem;
