--- a/src/sections/navbar.module.scss
+++ b/src/sections/navbar.module.scss
@@ -13,6 +13,7 @@
   display: flex;
   align-items: center;
   img {
+    padding: 0 1rem;
     width: 100%;
     height: 75%;
     object-fit: contain;
